k8s/overlays/rc/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-ingress
spec:
  tls:
    - hosts:
        - stg.ciyex.com
      secretName: ciyex-ingress-rc-tls
  rules:
    - host: stg.ciyex.com
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: ciyex-app
                port:
                  number: 8080
